--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "node scripts/build.js",
     "build-src": "node scripts/build.js src",
     "prepublish": "npm run build-src",
-    "test": "npm run jshint -s && npm run mocha -s && npm run test-components -s && npm run test-components-deprecated -s",
+    "test": "npm run lint -s && npm run mocha -s && npm run test-components -s && npm run test-components-deprecated -s",
     "test-ci": "npm run test-generate-coverage",
     "mocha": "node test/__runner__/server/cli.js",
     "test-coverage": "npm run test-generate-coverage && nyc report --reporter=html && open ./coverage/index.html",
@@ -43,7 +43,7 @@
     "test-components-browser-dev": "browser-refresh test/__runner__/browser/cli.js components-browser/index.js --server",
     "test-page": "node test/__runner__/browser/cli.js components-browser/index.js --automated --page",
     "test-pages": "npm run test-components-pages",
-    "jshint": "jshint src/ *.js",
+    "lint": "eslint .",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "codecov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
@@ -100,13 +100,14 @@
     "child-process-promise": "^2.2.1",
     "codecov": "^2.3.0",
     "coveralls": "^2.13.1",
+    "eslint": "^4.11.0",
+    "eslint-config-unobtrusive": "^1.1.0",
     "express": "^4.16.1",
     "fs-extra": "^2.0.0",
     "ignoring-watcher": "^1.0.2",
     "istanbul-lib-instrument": "^1.8.0",
     "jquery": "^3.1.1",
     "jsdom": "^9.6.0",
-    "jshint": "^2.5.0",
     "lasso": "^2.4.1",
     "lasso-babel-transform": "^1.0.0",
     "lasso-marko": "^2.1.0",
